kustom/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: person-service
spec:
  to:
    kind: Service
    name: dev-person-service
